--- a/requirements.yml
+++ b/requirements.yml
@@ -1,22 +1,27 @@
 ---
 functional:
-  - Пользователь должен иметь возможность сыграть с другом 1
-  - Пользователь должен иметь возможность сыграть с ботом 2
-  - Пользователь должен иметь возможность сыграть со случайным соперником 3
-  - Пользователь должен иметь возможность создать турнир 4
-  - Пользователь должен иметь возможность сыграть турнир с друзьями 5
-  - Пользователь должен иметь возможность просмотреть свой профиль 6
-  - Пользователь должен иметь возможность зайти в настройки 7
-  - Пользователь должен иметь возможность просмотреть рейтинг 8
-  - Пользователь должен иметь возможность просмотреть задачи 9
-  - Пользователь должен иметь возможность просмотреть список турниров 10
+  - Пользователь должен иметь возможность зарегистрироваться 1
+  - Пользователь должен иметь возможность войти в свой аккаунт через существующие логин и пароль 2
+  - Пользователь должен иметь возможность войти в свой аккаунт через Discord 3
+  - Пользователь должен иметь возможность войти в свой аккаунт через Github 4
+  - Пользователь должен иметь возможность сыграть простую битву без регистрации 5
+  - Пользователь должен иметь возможность сыграть с другом 6
+  - Пользователь должен иметь возможность сыграть с ботом 7
+  - Пользователь должен иметь возможность сыграть со случайным соперником 8 
+  - Пользователь должен иметь возможность создать турнир 9
+  - Пользователь должен иметь возможность сыграть турнир с друзьями 10 
+  - Пользователь должен иметь возможность просмотреть свой профиль 11
+  - Пользователь должен иметь возможность зайти в настройки 12
+  - Пользователь должен иметь возможность просмотреть рейтинг 13
+  - Пользователь должен иметь возможность просмотреть задачи 14
+  - Пользователь должен иметь возможность просмотреть список турниров 15 
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 11
-  - Сайт должен быть безопасным и защищать данные пользователя 12
-  - Сайт должен быть удобным на мобильном устройстве 13
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 14
-  - Сайт должен быть способен обрабатывать большое количество трафика 15
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 16 
+  - Сайт должен быть безопасным и защищать данные пользователя 17
+  - Сайт должен быть удобным на мобильном устройстве 18
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 19 
+  - Сайт должен быть способен обрабатывать большое количество трафика 20
 implicit:
-  - Сайт должен выдерживать нагрузку в 1000 пользователей 16
-  - Сайт должен иметь высокую скорость обновления в реальном времени 17
-  - Сайт должен иметь адекватные уведомления об изменениях в игровом процессе 18
+  - Сайт должен выдерживать нагрузку в 1000 пользователей 21
+  - Сайт должен иметь высокую скорость обновления в реальном времени 22 
+  - Сайт должен иметь уведомления об изменениях во время игрового процесса 23 
