--- a/test-cases.yml
+++ b/test-cases.yml
@@ -50,7 +50,7 @@
 - summary: |
     Проверка регистрации пользователя через Github
   requirement: |
-    При верном вводе логине и пароля пользователь зарегистрироваться
+    При верном вводе логине и пароля пользователь должен зарегистрироваться
   prerequisites: |
     Открыта страница логина https://codebattle.hexlet.io/session/new?locale=en&next=%2F
   test-data: |
@@ -86,7 +86,7 @@
 - summary: |
     Проверка возможности пользователя сыграть простую битву без регистрации
   requirement: |
-    При нажатии на кнопку "Try simple battle" незарегистрированным пользователем происходит переход на страницу битвы
+    При нажатии на кнопку "Try simple battle" незарегистрированным пользователем должен произойти переход на страницу битвы
   prerequisites: |
     Открыта главная страница https://codebattle.hexlet.io/
   test-data: |
@@ -99,54 +99,104 @@
 - summary: |
     Проверка возможности пользователя сыграть с другом 
   requirement: |
-     
+    При нажатии на кнопку "Create invite" должен произойти переход на страницу битвы
   prerequisites: |
-     
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем тип игры "With a friend"
+    - Нажимаем на кнопку "Create invite"
   expected-result: |
      Должен произойти переход на страницу битвы
 
 - summary: |
     Проверка возможности пользователя сыграть с ботом
   requirement: |
-     
+    При нажатии на кнопку "Create battle" должен произойти переход на страницу битвы
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+     empty
   steps:
-  
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем тип игры "With a bot"
+    - Нажимаем на кнопку "Create battle"
   expected-result: |
      Должен произойти переход на страницу битвы
 
 - summary: |
     Проверка возможности пользователя сыграть со случайным соперником
   requirement: |
-     
+    При нажатии на кнопку "Create battle" должен произойти переход на страницу битвы
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем тип игры "With other user"
+    - Нажимаем на кнопку "Create battle"
   expected-result: |
      Должен произойти переход на страницу битвы
 
 - summary: |
-    Проверка возможности пользователя создать турнир
+    Проверка возможности пользователя выбрать уровень сложности битвы
   requirement: |
-     
+    При нажатии на кнопку выбора уровня сложности должен отобразиться уровень "elementary", "easy", "medium" или "hard"
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем определенный уровень сложности битвы
   expected-result: |
+    Кнопка выбранного уровня сложности должна загореться красным цветом
 
+- summary: |
+    Проверка возможности пользователя выбрать продолжительности битвы
+  requirement: |
+    При перемещении ползунка выбора продолжительности битвы должно отобразиться время от 3-х до 60 минут 
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Перемещаем ползунок выбора продолжительности битвы
+  expected-result: |
+    Должно отобразиться время продолжительности битвы
+
+- summary: |
+    Проверка возможности пользователя выбрать задачу по имени
+  requirement: |
+     При выборе определенной задачи из списка, под ним должны высветиться соответствующие теги
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем задачу из списка
+  expected-result: |
+    Для выбранной задачи из списка должны высветиться определенные теги, горящие красным цветом
+
+- summary: |
+    Проверка возможности пользователя выбрать задачу по тегам
+  requirement: |
+     При выборе задачи "random task" из списка пользователь должен иметь возможность самостоятельного выбора тегов
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Create a game"
+    - Выбираем задачу "random task"
+    - Нажимаем на кнопки тегов
+  expected-result: |
+    При выборе задачи "random task" должны высветиться теги, при выборе которых они должны загораться красным цветом
 
 - summary: |
     Проверка возможности пользователя сыграть турнир с друзьями
