--- a/requirements.yml
+++ b/requirements.yml
@@ -8,6 +8,11 @@ functional:
   - Пользователь должен иметь возможность сыграть с другом 6
   - Пользователь должен иметь возможность сыграть с ботом 7
   - Пользователь должен иметь возможность сыграть со случайным соперником 8 
+  - Пользователь должен иметь возможность выбора уровня сложности битвы
+  - Пользователь должен иметь возможность выбора продолжительности битвы 
+  - Пользователь должен иметь возможность выбора задачи по имени
+  - Пользователь должен иметь возможность выбора задачи по тегам
+  expected-result: |
   - Пользователь должен иметь возможность создать турнир 9
   - Пользователь должен иметь возможность сыграть турнир с друзьями 10 
   - Пользователь должен иметь возможность просмотреть свой профиль 11
