--- a/test-cases.yml
+++ b/test-cases.yml
@@ -172,7 +172,7 @@
 - summary: |
     Проверка возможности пользователя выбрать задачу по имени
   requirement: |
-     При выборе определенной задачи из списка, под ним должны высветиться соответствующие теги
+    При выборе определенной задачи из списка, под ним должны высветиться соответствующие теги
   prerequisites: |
     Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
@@ -186,7 +186,7 @@
 - summary: |
     Проверка возможности пользователя выбрать задачу по тегам
   requirement: |
-     При выборе задачи "random task" из списка пользователь должен иметь возможность самостоятельного выбора тегов
+    При выборе задачи "random task" из списка пользователь должен иметь возможность самостоятельного выбора тегов
   prerequisites: |
     Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
@@ -199,16 +199,59 @@
     При выборе задачи "random task" должны высветиться теги, при выборе которых они должны загораться красным цветом
 
 - summary: |
-    Проверка возможности пользователя сыграть турнир с друзьями
+    Проверка возможности пользователя присоединиться к предложенным битвам
   requirement: |
-     
+    При нажатии на кнопку "Fight" пользователь должен перейти на страницу битвы
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажимаем на кнопку "Fight" из списка битв
   expected-result: |
+    Должен произойти переход на страницу битвы
+
+- summary: |
+    Проверка возможности пользователя сыграть турнир
+  requirement: |
+    При нажатии на кнопку "Join" пользователь должен присоединиться к турниру
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Tournaments"
+    - Нажимаем на кнопку "Show"
+    - Нажимаем на кнопку "Join"
+  expected-result: |
+    Пользователь должен присоединиться к турниру
+
+- summary: |
+    Проверка возможности пользователя просматривать историю сыгранных битв 
+  requirement: |
+    При нажатии на кнопку "History" должна открыться история всех сыгранных битв
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "History"
+  expected-result: |
+    Должна открыться история всех сыгранных битв
+
+- summary: |
+    Проверка возможности пользователя отправить сообщение в общий чат
+  requirement: |
+    При нажатии на кнопку "Send" сообщение пользователя должно отобразиться в общем чате
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Вводим любое сообщение в строку отправки сообщения
+    - Нажимаем на кнопку "Send"
+  expected-result: |
+    Сообщение пользователя должно отобразиться в общем чате
 
 - summary: |
     Проверка возможности пользователя просмотреть свой профиль
