--- a/test-cases.yml
+++ b/test-cases.yml
@@ -254,6 +254,50 @@
     Сообщение пользователя должно отобразиться в общем чате
 
 - summary: |
+    Проверка возможности пользователя отправить личное сообщение другому пользователю, который сейчас онлайн
+  requirement: |
+    При нажатии на кнопку "Send" другому пользователю должно отправиться личное сообщение
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Send message"
+    - Выбираем определенного пользователя из списка "Send private message"
+    - Вводим любое сообщение в строку отправки сообщения
+    - Нажимаем на кнопку "Send"
+  expected-result: |
+    Сообщение пользователя должно отобразиться в личном чате
+
+- summary: |
+    Проверка возможности пользователя отправить приглашение на битву пользователю, который сейчас онлайн 
+  requirement: |
+    При нажатии на кнопку "Create invite" другому пользователю должно отправиться приглашение на битву д
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Send fight invite"
+    - Выбираем определенного пользователя из списка "Send battle invite"
+    - Нажимаем на кнопку "Create invite"
+  expected-result: |
+    Другой пользователь должен получить приглашение на битву
+
+- summary: |
+    Проверка возможности пользователя просматривать приглашения на битву от других игроков
+  requirement: |
+    При нажатии на кнопку "Invites" должен открыться список с приглашениями
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажимаем на кнопку "Invites"
+  expected-result: |
+    Должны отобразиться приглашения на битву от других игроков
+
+- summary: |
     Проверка возможности пользователя просмотреть свой профиль
   requirement: |
      
