--- a/requirements.yml
+++ b/requirements.yml
@@ -8,24 +8,30 @@ functional:
   - Пользователь должен иметь возможность сыграть с другом 6
   - Пользователь должен иметь возможность сыграть с ботом 7
   - Пользователь должен иметь возможность сыграть со случайным соперником 8 
-  - Пользователь должен иметь возможность выбора уровня сложности битвы
-  - Пользователь должен иметь возможность выбора продолжительности битвы 
-  - Пользователь должен иметь возможность выбора задачи по имени
-  - Пользователь должен иметь возможность выбора задачи по тегам
-  expected-result: |
-  - Пользователь должен иметь возможность создать турнир 9
-  - Пользователь должен иметь возможность сыграть турнир с друзьями 10 
-  - Пользователь должен иметь возможность просмотреть свой профиль 11
-  - Пользователь должен иметь возможность зайти в настройки 12
-  - Пользователь должен иметь возможность просмотреть рейтинг 13
-  - Пользователь должен иметь возможность просмотреть задачи 14
-  - Пользователь должен иметь возможность просмотреть список турниров 15 
+  - Пользователь должен иметь возможность выбора уровня сложности битвы 9
+  - Пользователь должен иметь возможность выбора продолжительности битвы 10
+  - Пользователь должен иметь возможность выбора задачи по имени 11
+  - Пользователь должен иметь возможность выбора задачи по тегам 12
+  - Пользователь должен иметь возможность присоединиться к предложенным битвам 13
+  - Пользователь должен иметь возможность сыграть турнир 14
+  - Пользователь должен иметь возможность создать свой турнир 15
+  
+  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 
+  - Пользователь должен иметь возможность отправлять сообщение в общий чат 
+  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 
+  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 
+  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 
+  - Пользователь должен иметь возможность просмотреть свой профиль 
+  - Пользователь должен иметь возможность зайти в настройки 
+  - Пользователь должен иметь возможность просмотреть рейтинг 
+  - Пользователь должен иметь возможность просмотреть задачи 
+  - Пользователь должен иметь возможность просмотреть список турниров 
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 16 
-  - Сайт должен быть безопасным и защищать данные пользователя 17
-  - Сайт должен быть удобным на мобильном устройстве 18
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 19 
-  - Сайт должен быть способен обрабатывать большое количество трафика 20
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
+  - Сайт должен быть безопасным и защищать данные пользователя 
+  - Сайт должен быть удобным на мобильном устройстве 
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 1
+  - Сайт должен быть способен обрабатывать большое количество трафика 
 implicit:
   - Сайт должен выдерживать нагрузку в 1000 пользователей 21
   - Сайт должен иметь высокую скорость обновления в реальном времени 22 
