--- a/test-cases.yml
+++ b/test-cases.yml
@@ -338,55 +338,67 @@
     Должны отобразиться приглашения на битву от других игроков
 
 - summary: |
-    Проверка возможности пользователя просмотреть свой профиль
+    Проверка возможности пользователя просмотреть свою статистику
   requirement: |
-     
+    При нажатии на кнопку "My profile" должен произойти переход на страницу профиля
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажать на кнопку никнейма
+    - Нажать на кнопку "My profile"
   expected-result: |
+    Должена отобразиться статистика по всем играм
 
 - summary: |
-    Проверка возможности пользователя зайти в настройки
+    Проверка возможности пользователя просмотреть подбробную информацию по своим сыгранным играм
   requirement: |
-     
+    При нажатии на кнопку "Show" должна отобразиться подробная информация о сыгранной игре
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажать на кнопку никнейма
+    - Нажать на кнопку "My profile"
+    - Нажать на кнопку "Completed games"
+    - Нажать на кнопку "Show"
   expected-result: |
+    Должна отобразиться подробная информация об игре
 
 - summary: |
-    Проверка возможности пользователя просмотреть рейтинг
+    Проверка возможности пользователя настраивать свой профиль 
   requirement: |
-     
+     При нажатии на кнопку "Settings" должна отобразиться страница с настройками профиля
   prerequisites: |
-    
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
   test-data: |
-    
+    empty
   steps:
-  
+    - Нажать на кнопку никнейма
+    - Нажать на кнопку "My profile"
+    - Нажать на кнопку "Settings"
   expected-result: |
+    Должна открыться страница с настройками профиля
+
+- summary: |
+    Проверка возможности пользователя просмотреть рейтинг других пользователей
+  requirement: |
+    При нажатии на кнопку "Users rating" должна отобразиться таблица с рейтингом
+  prerequisites: |
+    Открыта главная страница https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Нажать на кнопку никнейма
+    - Нажать на кнопку "My profile"
+    - Нажать кнопку "Users rating"
+  expected-result: |
+    Должен отобразиться общий рейтинг всех пользователей
 
 - summary: |
     Проверка возможности пользователя просмотреть задачи
-  requirement: |
-     
-  prerequisites: |
-    
-  test-data: |
-    
-  steps:
-  
-  expected-result: |
-
-- summary: |
-    Проверка возможности пользователя просмотреть список турниров
   requirement: |
      
   prerequisites: |
