--- a/requirements.yml
+++ b/requirements.yml
@@ -20,12 +20,12 @@ functional:
   - Пользователь должен иметь возможность отправлять сообщение в общий чат 
   - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 
   - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 
-  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 
-  - Пользователь должен иметь возможность просмотреть свой профиль 
-  - Пользователь должен иметь возможность зайти в настройки 
-  - Пользователь должен иметь возможность просмотреть рейтинг 
+  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков
+  - Пользователь должен иметь возможность просмотреть свою статистику
+  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм
+  - Пользователь должен иметь возможность настраивать свой профиль
+  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей
   - Пользователь должен иметь возможность просмотреть задачи 
-  - Пользователь должен иметь возможность просмотреть список турниров 
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
   - Сайт должен быть безопасным и защищать данные пользователя 
