--- a/requirements.yml
+++ b/requirements.yml
@@ -24,8 +24,15 @@ functional:
   - Пользователь должен иметь возможность просмотреть свою статистику
   - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм
   - Пользователь должен иметь возможность настраивать свой профиль
+  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах
+  - Пользователь должен иметь возможность создать новую задачу
+  - Пользователь должен иметь возможность создать пакеты задач
   - Пользователь должен иметь возможность просмотреть рейтинг других пользователей
   - Пользователь должен иметь возможность просмотреть задачи 
+  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 
+  - Пользователь должен иметь возможность перейти на страницу Hexlet
+  - Пользователь должен иметь возможность присоединиться к группе игры в Discord
+  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram
 non-functional:
   - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
   - Сайт должен быть безопасным и защищать данные пользователя 
