--- a/requirements.yml
+++ b/requirements.yml
@@ -15,31 +15,30 @@ functional:
   - Пользователь должен иметь возможность присоединиться к предложенным битвам 13
   - Пользователь должен иметь возможность сыграть турнир 14
   - Пользователь должен иметь возможность создать свой турнир 15
-  
-  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 
-  - Пользователь должен иметь возможность отправлять сообщение в общий чат 
-  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 
-  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 
-  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков
-  - Пользователь должен иметь возможность просмотреть свою статистику
-  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм
-  - Пользователь должен иметь возможность настраивать свой профиль
-  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах
-  - Пользователь должен иметь возможность создать новую задачу
-  - Пользователь должен иметь возможность создать пакеты задач
-  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей
-  - Пользователь должен иметь возможность просмотреть задачи 
-  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 
-  - Пользователь должен иметь возможность перейти на страницу Hexlet
-  - Пользователь должен иметь возможность присоединиться к группе игры в Discord
-  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram
+  - Пользователь должен иметь возможность просматривать историю всех сыгранных битв 16
+  - Пользователь должен иметь возможность отправлять сообщение в общий чат 17
+  - Пользователь должен иметь возможность отправлять личное сообщение другому пользователю онлайн 18
+  - Пользователь должен иметь возможность отправлять приглашение на битву другому пользователю онлайн 19
+  - Пользователь должен иметь возможность просмотреть приглашения на битву от других игроков 20
+  - Пользователь должен иметь возможность просмотреть свою статистику 21
+  - Пользователь должен иметь возможность просмотреть подробную информацию по своим сыгранным играм 22
+  - Пользователь должен иметь возможность настраивать свой профиль 23
+  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 24
+  - Пользователь должен иметь возможность создать новую задачу 25
+  - Пользователь должен иметь возможность создать пакеты задач 26
+  - Пользователь должен иметь возможность просмотреть рейтинг других пользователей 27
+  - Пользователь должен иметь возможность просмотреть подробную информацию о задачах 28 
+  - Пользователь должен иметь возможность перейти на страницу с исходным кодом на Github 29 
+  - Пользователь должен иметь возможность перейти на страницу Hexlet 30
+  - Пользователь должен иметь возможность присоединиться к группе игры в Discord 31
+  - Пользователь должен иметь возможность присоединиться к группе игры в Telegram 32
 non-functional:
-  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы  
-  - Сайт должен быть безопасным и защищать данные пользователя 
-  - Сайт должен быть удобным на мобильном устройстве 
-  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 1
-  - Сайт должен быть способен обрабатывать большое количество трафика 
+  - Сайт должен быть разработан с учетом удобства использования и оптимизирован для скорости работы 33  
+  - Сайт должен быть безопасным и защищать данные пользователя 34
+  - Сайт должен быть удобным на мобильном устройстве 35
+  - Сайт должен быть протестирован на совместимость с последними версиями браузеров 36
+  - Сайт должен быть способен обрабатывать большое количество трафика 37
 implicit:
-  - Сайт должен выдерживать нагрузку в 1000 пользователей 21
-  - Сайт должен иметь высокую скорость обновления в реальном времени 22 
-  - Сайт должен иметь уведомления об изменениях во время игрового процесса 23 
+  - Сайт должен выдерживать нагрузку в 1000 пользователей 38
+  - Сайт должен иметь высокую скорость обновления в реальном времени 39
+  - Сайт должен иметь уведомления об изменениях во время игрового процесса 40
