--- a/test-cases.yml
+++ b/test-cases.yml
@@ -255,18 +255,6 @@
     Должен создаться свой турнир
 
 - summary: |
-    Проверка возможности пользователя 
-  requirement: |
-     
-  prerequisites: |
-    
-  test-data: |
-    
-  steps:
-  
-  expected-result: |
-
-- summary: |
     Проверка возможности пользователя просматривать историю сыгранных битв 
   requirement: |
     При нажатии на кнопку "History" должна открыться история всех сыгранных битв
@@ -498,38 +486,91 @@
     Должен произойти переход на страницу игры в Telegram
 
 - summary: |
-    Проверка адаптивности сайта на различных устройствах (Galaxy Mini S5570, Lumia Series, Nexus 4)
+    Проверка адаптивности сайта на различных устройствах (Google Pixel, Samsung Galaxy S8+, Asus Zenbook Fold)
   requirement: |
-     
+    Сайт должен корректно отображаться на различных устройствах 
   prerequisites: |
-    
+    Открыты инструменты разработчика Devtools в браузере
   test-data: |
-    
+    Тестовое мобильное устройство Google Pixel 7
+    Тестовое мобильное устройство Samsung Galaxy S8+ 
+    Тестовое мобильное устройство Asus Zenbook Fold
   steps:
-  
+    - Открываем инструменты разработчика Devtools в браузере
+    - Выбираем тестовые мобильные устройства
+    - Переходим на главную страницу игры https://codebattle.hexlet.io/#lobby
   expected-result: |
-
-
-- summary: |
-    Проверка работы сайта на различных устройствах (Galaxy Mini S5570, Lumia Series, Nexus 4)
-  requirement: |
-     
-  prerequisites: |
-    
-  test-data: |
-    
-  steps:
-  
-  expected-result: |
+     Сайт игры должен корректно отображаться на всех выбранных тестовых устройствах
 
 - summary: |
-     Проверка совместимости сайта с последними версиями браузеров (Google Chrome, Mozilla Firefox, Opera)
+    Проверка работы сайта на различных устройствах (Google Pixel, Samsung Galaxy S8+, Asus Zenbook Fold)
   requirement: |
-     
+    Сайт должен корректно работать на различных устройствах 
   prerequisites: |
-    
+    Открыты инструменты разработчика Devtools в браузере
   test-data: |
-    
+    Тестовое мобильное устройство Google Pixel 7
+    Тестовое мобильное устройство Samsung Galaxy S8+ 
+    Тестовое мобильное устройство Asus Zenbook Fold
   steps:
-  
+    - Открываем инструменты разработчика Devtools в браузере
+    - Выбираем тестовые мобильные устройства
+    - Переходим на главную страницу игры https://codebattle.hexlet.io/#lobby
+    - Играем простую битву без регистрации
+    - Входим в аккаунт
+    - Играем с другом
+    - Играем с ботом
+    - Играем со случайным соперником
+    - Создаем турнир
+    - Присоединяемся к турниру
+    - Просматриваем историю всех сыгранных битв
+    - Просматриваем свой профиль
+    - Просматриваем настройки
+    - Создаем задачи
+    - Просматриваем рейтинг других пользователей
   expected-result: |
+     Сайт игры должен корректно отображаться на всех выбранных тестовых устройствах
+
+- summary: |
+    Проверка совместимости сайта с последними версиями браузеров (Google Chrome, Mozilla Firefox, Opera)
+  requirement: |
+    Сайт должен быть совместим с последними версиями браузеров
+  prerequisites: |
+    Открыт сайт для тестирования кроссбраузерности https://www.browserstack.com/
+  test-data: |
+    Браузер Google Chrome
+    Браузер Mozilla Firefox
+    Браузер Opera
+  steps:
+    - Открываем инструменты разработчика Devtools в браузере
+    - Выбираем последние версии браузеров
+    - Переходим на главную страницу игры https://codebattle.hexlet.io/#lobby
+    - Играем простую битву без регистрации
+    - Входим в аккаунт
+    - Играем с другом
+    - Играем с ботом
+    - Играем со случайным соперником
+    - Создаем турнир
+    - Присоединяемся к турниру
+    - Просматриваем историю всех сыгранных битв
+    - Просматриваем свой профиль
+    - Просматриваем настройки
+    - Создаем задачи
+    - Просматриваем рейтинг других пользователей
+  expected-result: |
+     Сайт игры должен корректно работать во всех последних версиях браузеров
+
+- summary: |
+    Проверка скорости загрузки сайта
+  requirement: |
+    При изменении скорости соединения сайт должен работать корректно
+  prerequisites: |
+    Переходим на главную страницу игры https://codebattle.hexlet.io/#lobby
+  test-data: |
+    empty
+  steps:
+    - Переходим на сайт 
+    - Открываем инструменты разработчика Devtools в браузере
+    - Тестируем сайт при скорости соединения 4G, 3G и т.д.
+  expected-result: |
+    Сайт должен загружаться корректно при разной скорости соединения
