--- a/test-cases.yml
+++ b/test-cases.yml
@@ -156,7 +156,7 @@
     Кнопка выбранного уровня сложности должна загореться красным цветом
 
 - summary: |
-    Проверка возможности пользователя выбрать продолжительности битвы
+    Проверка возможности пользователя выбрать время продолжительности битвы
   requirement: |
     При перемещении ползунка выбора продолжительности битвы должно отобразиться время от 3-х до 60 минут 
   prerequisites: |
